@@ -15,10 +15,10 @@ for x in range(60, 750, 50):
 
             
 # Add the walls
-AddStatic(0, 0, 1, 550, "static_hit()")
-AddStatic(799, 0, 1, 550, "static_hit()")
-AddStatic(1, 0, 799, 1, "static_hit()")
-AddStatic(0, 550, 799, 50, "static_hit()")
+AddEntity("static", 0, 0, 1, 550, "static_hit()")
+AddEntity("static", 799, 0, 1, 550, "static_hit()")
+AddEntity("static", 1, 0, 799, 1, "static_hit()")
+AddEntity("hole", 0, 550, 799, 50, "static_hit()")
 
 # Add a paddle
 SetPaddle(40, 12, "graphics/objects/paddle.png")
