@@ -6,11 +6,11 @@ def AddBrick(x, y, hitfunction, pixmap):
     "Add a brick to the current map"
     yanoid_map.AddObject("brick", hitfunction, x, y, 0, 0, pixmap)
 
-# AddStatic(int x, int y, int w, int h, string hitfunction)
+# AddEntity(string type, int x, int y, int w, int h, string hitfunction)
 # Adds a static (simple object, no pixmap) at x,y having size w,h
-def AddStatic(x, y, w, h, hitfunction):
+def AddEntity(type, x, y, w, h, hitfunction):
     "Add a static (simple object, no pixmap) to the current map"
-    yanoid_map.AddObject("static", hitfunction, x, y, w, h, "")
+    yanoid_map.AddObject(type, hitfunction, x, y, w, h, "")
 
 # AddBallDefault(string pixmap)
 # Adds a ball at a default position
