@@ -1,3 +1,9 @@
+2001-11-14  Mads Bondo Dydensborg  <madsdyd@mother>
+
+	* Gameplay
+	Added a THole, that can swallow a ball. 
+	First steps towards rounds, score and such.
+
 2001-11-13  Mads Bondo Dydensborg  <madsdyd@mother>
 
 	* Version
